# oshiya

./: .gitmodules  CMakeLists.txt  README.md  config.h.in
include/: ApnsBackend.hpp  AppServer.hpp  Backend.hpp  Base64.hpp  Component.hpp  Config.hpp  GcmBackend.hpp  InPacket.hpp  Jid.hpp  OutPacket.hpp  RNG.hpp  Registration.hpp  SmartPointerUtil.hpp  StanzaDispatcher.hpp  UbuntuBackend.hpp  UriCodec.hpp  XData.hpp  XmlElement.hpp  XmppUtils.hpp
src/: ApnsBackend.cpp  AppServer.cpp  Backend.cpp  Base64.cpp  CMakeLists.txt  Component.cpp  Config.cpp  GcmBackend.cpp  Oshiya.cpp  OutPacket.cpp  RNG.cpp  Registration.cpp  StanzaDispatcher.cpp  UbuntuBackend.cpp  UriCodec.cpp  XData.cpp  XmlElement.cpp  XmppUtils.cpp
test/: CMakeLists.txt
